
INCLUDES = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" \
	$(PACKAGE_CFLAGS)

lib_LIBRARIES = \
	libasterix_bazar.a

libasterix_bazar_a_SOURCES = \
	runner.cpp          \
	runner.h          \
	tools.cpp          \
	tools.h          \
	types.h          \
	socket_util.h          \
	socket_util.cpp          \
	mensaje.cpp          \
	mensaje.h          \
	nodo.h          \
	nodo.cpp

## File created by the gnome-build tools

